fixed waves and launch btn on mobile view

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -7,32 +7,44 @@
 .center {
     display: flex;
     width: 100vw;
-    height: calc(100vh - 84px);
-    max-height: calc(100vh - 84px);
+    height: calc(100vh - 80px);
+    max-height: calc(100vh - 80px);
     overflow: hidden;
 
 
-
-    // justify-content: center;
     align-items: center;
     flex-direction: column;
     position: relative;
 }
 
 .heroSection {
-    height: calc(100vh - 84px);
-    max-height: calc(100vh - 84px);
+    height: calc(100vh - 80px);
+    max-height: calc(100vh - 80px);
     overflow: hidden;
+    
 
 }
 
-.waves {
-    position: absolute;
+
+.waveSvg {
     z-index: -3;
-    width: 100%;
-    height: 400px;
-    bottom: 150px;
-    margin: 0;
-    padding: 0;
-    // overflow: hidden;
+    position: absolute;
+    bottom: 0;
+}
+
+.launchBtn {
+    position: absolute;
+    bottom: 30px;
+}
+
+@media screen and (min-width: 768px) {
+    .center {
+        height: calc(100vh - 100px);
+        max-height: calc(100vh - 100px);
+    }
+
+    .heroSection {
+        height: calc(100vh - 100px);
+        max-height: calc(100vh - 100px);
+    }
 }
